--- a/package.json
+++ b/package.json
@@ -7,14 +7,24 @@
     "build": "next build",
     "start": "next start"
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "next": "^10.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.13.0",
+    "@babel/core": "^7.13.8",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.13.0",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "babel-plugin-styled-components": "^1.12.0",
     "typescript": "^4.2.2"
   }
 }
