--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "styled-components": "^5"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.11",
     "@babel/polyfill": "^7.12.1",
+    "graphql": "^15.5.0",
     "gray-matter": "^4.0.2",
     "next": "^10.0.0",
     "react": "17.0.1",
