--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.ts",
+    "dev": "nodemon src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "graphql": "^15.5.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.7",
     "typescript": "^4.2.2"
   }
 }
