--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - /opt/app/node_modules
     ports:
       - 4000:4000
+      - 9229:9229 # debug
     env_file:
       - docker-compose.env
   client:
@@ -20,5 +21,6 @@ services:
       - /opt/app/node_modules
     ports:
       - 3000:3000
+      - 35729:35729 # debug
     env_file:
       - docker-compose.env
